minimize overflow fix

--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -12,7 +12,7 @@
   position: fixed;
   z-index: -1;
   top: 30px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   padding-top: 10px;
 }
 
